[gd_scene load_steps=4 format=2]

[ext_resource path="res://Nodes/Ui/UINumber.tscn" type="PackedScene" id=1]
[ext_resource path="res://Graphics/UI/ATM/number_container.png" type="Texture" id=2]
[ext_resource path="res://Scripts/UI/moneyContainer.gd" type="Script" id=3]

[node name="moneyContainer" type="TextureRect"]
margin_right = 51.0
margin_bottom = 11.0
texture = ExtResource( 2 )
script = ExtResource( 3 )

[node name="UINumber6" parent="." instance=ExtResource( 1 )]
position = Vector2( 2, 2 )

[node name="UINumber5" parent="." instance=ExtResource( 1 )]
position = Vector2( 10, 2 )

[node name="UINumber4" parent="." instance=ExtResource( 1 )]
position = Vector2( 18, 2 )

[node name="UINumber3" parent="." instance=ExtResource( 1 )]
position = Vector2( 26, 2 )

[node name="UINumber2" parent="." instance=ExtResource( 1 )]
position = Vector2( 34, 2 )

[node name="UINumber" parent="." instance=ExtResource( 1 )]
position = Vector2( 42, 2 )
